examples/neg/high_loop_no_grow/alice.oio
ALICE

channel BOB/B2@{H} : int@{H};

A2@{H} (secret : int@{H}) {
    print("ALICE/A2 received", secret);
    send(BOB/B2, secret+1);
}
